sumo/tests/traci/VariableRetrieval/Lane/errors/UnsupportedVariable/testclient.prog
simstep2 5
getvariable 0xa3 0xff dummy
simstep2 6
